# anyparser_langchain

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
anyparser_langchain/: __init__.py
changelogs/: v0.0.1-changelog.md  v0.0.2-changelog.md
examples/: 01_single_file_json.py  02_single_file_markdown.py  03_multiple_files_json.py  04_multiple_files_markdown.py  05_load_folder.py  06_ocr_markdown.py  07_ocr_json.py  08_crawler.py
tests/: test_loader.py  test_version.py
